feat: expose management api contracts
